--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -1,1 +1,31 @@
-<p>videos works!</p>
+<section class="partners">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-2">
+            <img src="assets/Images/Images-13.jpg" class="card-img-top" alt="...">
+                
+            </div>
+            <div class="col-md-2">
+            <img src="assets/Images/Images-13.jpg" class="card-img-top" alt="...">
+
+            </div>
+            <div class="col-md-2">
+            <img src="assets/Images/Images-13.jpg" class="card-img-top" alt="...">
+
+            </div>
+            <div class="col-md-2">
+            <img src="assets/Images/Images-13.jpg" class="card-img-top" alt="...">
+
+            </div>
+            <div class="col-md-2">
+            <img src="assets/Images/Images-13.jpg" class="card-img-top" alt="...">
+
+            </div>
+            <div class="col-md-2">
+            <img src="assets/Images/Images-13.jpg" class="card-img-top" alt="...">
+
+            </div>
+        </div>
+
+    </div>
+</section>
