--- a/src/app/scroll-top-button/scroll-top-button.component.css
+++ b/src/app/scroll-top-button/scroll-top-button.component.css
@@ -10,3 +10,15 @@
     opacity: 1;
     transition: all .2s ease-in-out;
 }
+
+button {
+    width: 50px;
+    height: 50px;
+    background-color: #0fe;
+    color: #000000;
+    border: none;
+    border-radius: 50%;
+    font-size: 24px;
+    text-align: center;
+    padding: 5px;
+}
