packages images added and customer says component generated

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,4 +1,4 @@
-.container{
+.container {
     font-family: poppins;
 }
 
@@ -41,7 +41,7 @@
 
 
 
-.space-between {
+/* .space-between {
     padding-top: 25px;
     padding-bottom: 25px;
 }
@@ -59,7 +59,6 @@
 }
 
 
-/* CSS FOR WHY CHOOSE US */
 
 a,
 a:hover,
@@ -179,7 +178,14 @@ p.awesome_line {
 .extra-text span {
     font-weight: 700;
     color: #f91942;
-}
+} */
+
+
+
+
+
+
+/* CSS FOR WHY CHOOSE US */
 
 .item {
     background: #fff;
@@ -268,4 +274,105 @@ p.awesome_line {
 .item h6 {
     margin-bottom: 20px;
     color: #2f2f2f;
+}
+
+
+/* CSS For What Cusstomers Say */
+
+
+
+.wrapper {
+    font-family: 'Montserrat', sans-serif;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    padding: 3% 0;
+}
+
+.border {
+    width: 450px;
+    height: 5px;
+    background: #6ab04c;
+    margin: 10px auto 30px;
+}
+
+.review-card {
+    background-color: #f5f5f5;
+    border-radius: 10px;
+    padding: 20px;
+    width: 300px;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
+}
+
+.img-area {
+    width: 80px;
+    height: 80px;
+    overflow: hidden;
+    border-radius: 50%;
+    margin-right: 25px;
+}
+
+.img-area img {
+    width: 100%;
+}
+
+.header-content {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.info h4 {
+    margin: 0;
+    font-size: 22px;
+    font-weight: 600;
+}
+
+.info p {
+    margin: 5px 0 0;
+    font-size: 14px;
+    font-weight: 400;
+    color: #666;
+}
+
+.single-review p {
+    margin: 0;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.7;
+    color: #333;
+}
+
+.review-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+    font-size: 14px;
+    color: #666;
+}
+
+.rating {
+    display: flex;
+}
+
+.rating span {
+    color: #000;
+    font-size: 18px;
+}
+
+.rating span.active {
+    color: #fbc02d;
+}
+
+@media screen and (max-width: 767px) {
+    .wrapper {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .review-card {
+        width: 85%;
+    }
 }
