--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -1,31 +1,56 @@
-<section class="partners">
+<!-- <section class="testimonial-section d-flex align-item-center">
     <div class="container">
-        <div class="row">
-            <div class="col-md-2">
-            <img src="assets/Images/Images-13.jpg" class="card-img-top" alt="...">
-                
-            </div>
-            <div class="col-md-2">
-            <img src="assets/Images/Images-13.jpg" class="card-img-top" alt="...">
+        <div class="row align-item-center">
+            <div class="col-md-6 testi-img ">
+
+                <div class="img-box mt-5">
+                    <div class="circle"></div>
+                    <div class="img-box-inner">
+                        <img src="assets/Images/Images-13.jpg" class="card-img-top" alt="...">
+                    </div>
+                </div>
 
             </div>
-            <div class="col-md-2">
-            <img src="assets/Images/Images-13.jpg" class="card-img-top" alt="...">
-
+            <div class="col-md-6">
+                <div id="carouselExampleControls" class="carousel slide" data-bs-interval="2000" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item testi-item active" data-color="#fb9c9a"
+                            data-img="assets/Images/Images-13.jpg">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quas dolorum enim rem
+                                aspernatur dignissimos ducimus quasi, quam optio vel nemo accusamus eaque, est illum
+                                architecto porro esse asperiores! Facilis!</p>
+                            <h3>Dev Patel 1 - <span>Developer</span></h3>
+                        </div>
+                        <div class="carousel-item testi-item" data-color="#fbd39a"
+                            data-img="assets/Images/Images-10.jpg">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quas dolorum enim rem
+                                aspernatur dignissimos ducimus quasi, quam optio vel nemo accusamus eaque, est illum
+                                architecto porro esse asperiores! Facilis!</p>
+                            <h3>Dev Patel 2 - <span>Developer</span></h3>
+                        </div>
+                        <div class="carousel-item testi-item" data-color="#9ab0fb"
+                            data-img="assets/Images/Images-12.jpg">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quas dolorum enim rem
+                                aspernatur dignissimos ducimus quasi, quam optio vel nemo accusamus eaque, est illum
+                                architecto porro esse asperiores! Facilis!</p>
+                            <h3>Dev Patel 3 - <span>Developer</span></h3>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#myCarousel"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
             </div>
-            <div class="col-md-2">
-            <img src="assets/Images/Images-13.jpg" class="card-img-top" alt="...">
 
-            </div>
-            <div class="col-md-2">
-            <img src="assets/Images/Images-13.jpg" class="card-img-top" alt="...">
-
-            </div>
-            <div class="col-md-2">
-            <img src="assets/Images/Images-13.jpg" class="card-img-top" alt="...">
-
-            </div>
         </div>
 
     </div>
-</section>
+</section> -->
+
