--- a/src/app/carousel/carousel.component.css
+++ b/src/app/carousel/carousel.component.css
@@ -3,3 +3,17 @@
     width: 100%;
     height: 380px;
 }
+
+
+/* KEYPOINTS FOR CAROUSEL BUTTON
+ */
+
+.c-item{
+    height: 480px;
+
+}
+.c-img{
+    height: 100%;
+    object-fit: cover;
+    filter: brightness(0.6);
+}
