--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -143,6 +143,8 @@
 </div>
 
 
+<!-- Why Choose Us Section -->
+
 <div class="container mt-4">
     <!-- <h1>Why Choose us ?</h1>
     <div class="divider"></div> -->
@@ -210,39 +212,142 @@
 
 </div>
 
+<!-- What Our Customers Say -->
+
 <div class="container mt-4">
-    <h1>What Our Customers Say </h1>
+    <!-- <app-customers-say></app-customers-say> -->
+    <h1 class="text-center">What Our Customers Say </h1>
+
+    <!-- <div class="border"></div> -->
 
 
+
+    <div class="wrapper">
+        <div class="review-card">
+            <div class="header-content">
+                <div class="img-area">
+                    <img alt="customer1" src="assets/Images/Images-10.jpg">
+                </div>
+                <div class="info">
+                    <h4>John Doe</h4>
+                    <p>Maketing Manager</p>
+                </div>
+            </div>
+            <div class="single-review">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolor eveniet deleniti repellendus!
+                    Minima,
+                    dolorum.</p>
+            </div>
+            <div class="review-footer">
+                <div class="rating">
+                    <span class="active">★</span>
+                    <span class="active">★</span>
+                    <span class="active">★</span>
+                    <span class="">★</span>
+                    <span class="">★</span>
+                </div>
+                <p>Reviewed on 01/01/2023</p>
+            </div>
+        </div>
+        <div class="review-card">
+            <div class="header-content">
+                <div class="img-area">
+                    <img alt="customer1" src="assets/Images/Images-11.jpg">
+                </div>
+                <div class="info">
+                    <h4>Mark Wood</h4>
+                    <p>Graphics Expert</p>
+                </div>
+            </div>
+            <div class="single-review">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolor eveniet deleniti repellendus!
+                    Minima,
+                    dolorum.</p>
+            </div>
+            <div class="review-footer">
+                <div class="rating">
+                    <span class="active">★</span>
+                    <span class="active">★</span>
+                    <span class="">★</span>
+                    <span class="">★</span>
+                    <span class="">★</span>
+                </div>
+                <p>Reviewed on 01/02/2023</p>
+            </div>
+        </div>
+        <div class="review-card">
+            <div class="header-content">
+                <div class="img-area">
+                    <img alt="customer1" src="assets/Images/Images-6.jpg">
+                </div>
+                <div class="info">
+                    <h4>Jason Chedd</h4>
+                    <p>Web Designer</p>
+                </div>
+            </div>
+            <div class="single-review">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolor eveniet deleniti repellendus!
+                    Minima,
+                    dolorum.</p>
+            </div>
+            <div class="review-footer">
+                <div class="rating">
+                    <span class="active">★</span>
+                    <span class="active">★</span>
+                    <span class="active">★</span>
+                    <span class="active">★</span>
+                    <span class="active">★</span>
+                </div>
+                <p>Reviewed on 01/03/2023</p>
+            </div>
+        </div>
+        <div class="review-card">
+            <div class="header-content">
+                <div class="img-area">
+                    <img alt="customer1" src="assets/Images/Images-6.jpg">
+                </div>
+                <div class="info">
+                    <h4>Jason Chedd</h4>
+                    <p>Web Designer</p>
+                </div>
+            </div>
+            <div class="single-review">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolor eveniet deleniti repellendus!
+                    Minima,
+                    dolorum.</p>
+            </div>
+            <div class="review-footer">
+                <div class="rating">
+                    <span class="active">★</span>
+                    <span class="active">★</span>
+                    <span class="active">★</span>
+                    <span class="active">★</span>
+                    <span class="active">★</span>
+                </div>
+                <p>Reviewed on 01/03/2023</p>
+            </div>
+        </div>
+        <button class="btn btn-info" routerLink="/customers-say">Know More</button>
+    </div>
+</div> 
+
+<!-- About Section -->
+
+
+<div class="col mt-3 p-5">
+    <h4>About Us</h4>
+    <p class="about-text">
+        Book a blood test or expert health check-up packages online with Patel Healthcare - one of the leading
+        diagnostic service provider in India. Get quality reports trusted by leading doctors and hospitals from our NABL
+        and CAP certified labs of Patel.
+        
+
+        One can either visit our nearest Patel lab to give your blood sample or opt for blood collection at home
+        service, so that you can get all the benefits of diagnostic centre and pathology labs in the comfort of your
+        home.
+
+        With a certified team of 200 senior pathologists and over 2000 technicians we, provide diagnostic services
+        ranging from routine to semi speciality tests like oncology, neurology, gynaecology, nephrology to complete
+        health check-up packages for Men, Women, Senior Citizens, Youth & <a routerLink="/about"> view more...</a>.
+    </p>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
