--- a/src/app/packages/packages.component.html
+++ b/src/app/packages/packages.component.html
@@ -30,7 +30,7 @@
     <div class="card mb-5" style="max-width: 100%;">
         <div class="row g-">
             <div class="col-md-4">
-                <img src="assets/Images/Dr. with Patient-2.jpg" class="img-fluid " alt="...">
+                <img src="assets/Packages/cbc-test.jpeg" class="img-fluid " alt="...">
             </div>
             <div class="col-md-8 ">
                 <div class="card-body p-5">
@@ -54,7 +54,7 @@
     <div class="card mb-5" style="max-width: 100%;">
         <div class="row g-0">
             <div class="col-md-4">
-                <img src="assets/Images/Dr. with Patient-2.jpg" class="img-fluid " alt="...">
+                <img src="assets/Packages/hba1c.jpeg" class="img-fluid " alt="...">
             </div>
             <div class="col-md-8 ">
                 <div class="card-body p-5">
@@ -81,7 +81,7 @@
     <div class="card mb-5" style="max-width: 100%;">
         <div class="row g-0">
             <div class="col-md-4">
-                <img src="assets/Images/Dr. with Patient-2.jpg" class="img-fluid " alt="...">
+                <img src="assets/Packages/urine.jpg" class="img-fluid " alt="...">
             </div>
             <div class="col-md-8 ">
                 <div class="card-body p-5">
@@ -103,7 +103,7 @@
     <div class="card mb-5" style="max-width: 100%;">
         <div class="row g-0">
             <div class="col-md-4">
-                <img src="assets/Images/Dr. with Patient-2.jpg" class="img-fluid " alt="...">
+                <img src="assets/Packages/thyroid.jpg" class="img-fluid " alt="...">
             </div>
             <div class="col-md-8 ">
                 <div class="card-body p-5">
@@ -126,7 +126,7 @@
     <div class="card mb-5" style="max-width: 100%;">
         <div class="row g-0">
             <div class="col-md-4">
-                <img src="assets/Images/Dr. with Patient-2.jpg" class="img-fluid " alt="...">
+                <img src="assets/Packages/sugar.jpg" class="img-fluid " alt="...">
             </div>
             <div class="col-md-8 ">
                 <div class="card-body p-5">
@@ -153,7 +153,7 @@
     <div class="card mb-5" style="max-width: 100%;">
         <div class="row g-0">
             <div class="col-md-4">
-                <img src="assets/Images/Dr. with Patient-2.jpg" class="img-fluid " alt="...">
+                <img src="assets/Packages/LIVER & KIDNEY PANE.jpg" class="img-fluid " alt="...">
             </div>
             <div class="col-md-8 ">
                 <div class="card-body p-5">
@@ -180,7 +180,7 @@
     <div class="card mb-5" style="max-width: 100%;">
         <div class="row g-0">
             <div class="col-md-4">
-                <img src="assets/Images/Dr. with Patient-2.jpg" class="img-fluid " alt="...">
+                <img src="assets/Packages/DENGUE FEVER NS1 ANTIGEN.jpg" class="img-fluid " alt="...">
             </div>
             <div class="col-md-8 ">
                 <div class="card-body p-5">
@@ -203,7 +203,7 @@
     <div class="card mb-5" style="max-width: 100%;">
         <div class="row g-0">
             <div class="col-md-4">
-                <img src="assets/Images/Dr. with Patient-2.jpg" class="img-fluid " alt="...">
+                <img src="assets/Packages/urine.jpg" class="img-fluid " alt="...">
             </div>
             <div class="col-md-8 ">
                 <div class="card-body p-5">
@@ -226,7 +226,7 @@
     <div class="card mb-5" style="max-width: 100%;">
         <div class="row g-0">
             <div class="col-md-4">
-                <img src="assets/Images/Dr. with Patient-2.jpg" class="img-fluid " alt="...">
+                <img src="assets/Packages/PLATELET COUNT.jpg" class="img-fluid " alt="...">
             </div>
             <div class="col-md-8 ">
                 <div class="card-body p-5">
@@ -248,7 +248,7 @@
     <div class="card mb-5" style="max-width: 100%;">
         <div class="row g-0">
             <div class="col-md-4">
-                <img src="assets/Images/Dr. with Patient-2.jpg" class="img-fluid " alt="...">
+                <img src="assets/Packages/WIDAL SLIDE AGGLUTINATION TEST.webp" class="img-fluid " alt="...">
             </div>
             <div class="col-md-8 ">
                 <div class="card-body p-5">
