--- a/src/app/videos/videos.component.css
+++ b/src/app/videos/videos.component.css
@@ -1,7 +1,106 @@
-.partners img{
-    transition: all .3s ease;
+/* .testimonial-section {
+    background-color: rgb(255, 255, 255);
+    padding: 80px 0;
+    min-height: 100vh;
+}
+
+.testi-img .img-box {
+
+    max-width: 360px;
+    margin: auto;
+    position: relative;
+    text-align: center;
 
 }
-.partners img:hover{
-    box-shadow: 0 0 10px 1px #e60404;
+
+.testi-img .circle {
+    height: 360px;
+    width: 360px;
+    background-color: #fb9c9a;
+    position: absolute;
+    border-radius: 50%;
+    left: 0;
+    bottom: 0;
+    transition: all 0.5s ease;
 }
+
+img {
+    background-image: none;
+    border: 1px solid red;
+}
+
+.testi-img .img-box-inner {
+    position: relative;
+    border-radius: 0 0 180px 180px;
+    overflow: hidden;
+}
+
+.testi-img .img-box-inner img {
+    max-width: 310px;
+}
+
+.testimonial-section .carousel-inner {
+    margin-bottom: 20px;
+}
+
+.testimonial-section .carousel-control-prev {
+    margin-right: 10px;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+    position: relative;
+    height: 35px;
+    width: 35px;
+    background-color: #fb9c9a;
+    display: inline-flex;
+    border-radius: 50%;
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    width: 15px;
+
+}
+
+.testi-item h3,
+.testi-item p {
+    font-size: 18px;
+}
+
+.testi-item h3 {
+    text-transform: capitalize;
+}
+
+
+@media(max-width:991px) {
+    .testi-img .img-box {
+        max-width: 200px;
+    }
+
+    .testi-img .circle {
+        width: 250px;
+        height: 250px;
+    }
+
+    .testi-img .img-box-inner {
+        border-radius: 0 0 150px 150px;
+    }
+
+    .testi-img .img-box-inner img {
+
+        max-width: 230px;
+    }
+}
+
+@media(max-width:767px) {
+    .testi-img {
+        margin-bottom: 25px;
+    }
+} */
+
+
+
+
+
+
