--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,6 +1,6 @@
 <div class=" bg-light" style="border: 1px solid rgb(255, 255, 255); font-family: poppins;">
 
-    <img src="assets/About-us.jpg" alt="" class="w-100" height="200">
+    <img src="assets/contact-us.jpg" alt="" class="w-100" height="200">
     <div class="col address">
 
         <!-- <h1 class="text-center">Get in touch</h1>
@@ -49,21 +49,21 @@
         <p class="text-center text-warning">Visit our office or drop a word if you have any queries.</p>
     </div>
 
-    <div class=" row m-4">
+    <div class=" row">
 
 
         <!-- <div class="col">
             <img class="img-fluid" src="assets/Contact-img.svg" alt="" height="400" width="500">
-        </div> -->/
-        <div class="col-5">
-            <!-- <iframe
+        </div> -->
+        <div class="col">
+            <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3597.2366797400705!2d81.99712601000708!3d25.630269177340566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399ab1d02c3dfec1%3A0x4f7feeca618b7e9f!2sTaza%20Akhbar!5e0!3m2!1sen!2sin!4v1706091841500!5m2!1sen!2sin"
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade">
-            </iframe> -->
+            </iframe>
         </div>
 
-        <div class="col-6 form mt-5">
+        <div class="col form ">
 
             <div class="form-floating mb-3">
                 <input type="name" class="form-control" id="floatingInput" placeholder="Enter Your Name">
