--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,16 +1,16 @@
 <div class="card text-white ">
-    <img class="img-fluid" src="assets/About-us.jpg" class="card-img" alt="About Us" height="220" width="auto">
+    <img class="img-fluid" src="assets/about.jpg" class="card-img" alt="About Us" height="220" width="auto">
     <div class="card-img-overlay">
-        <!-- <h5 class="card-title">About Us</h5> -->
+        <h5 class="h5 card-title mt-5">About Us</h5>
         <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
             This content is a little bit longer.</p> -->
-        <p class="card-text" style="float: right; margin-top: 150px;">Thank you for visiting this section, here you will
-            know all about me.</p>
+        <!-- <p class="card-text" style="float: right; margin-top: 150px;">Thank you for visiting this section, here you will
+            know all about me.</p> -->
     </div>
 </div>
 
 
-<div class="col mt-3 p-5">
+<div class="col mt-5 p-5">
     <p class="about-text">
         Book a blood test or expert health check-up packages online with Patel Healthcare - one of the leading
         diagnostic service provider in India. Get quality reports trusted by leading doctors and hospitals from our NABL
@@ -26,7 +26,7 @@
     </p>
 </div>
 
-<!-- <div class="row d-flex align-items-top p-3">
+<div class="row d-flex align-items-top p-3">
     <div class="col-sm-1"></div>
     <div class="col-sm-4">
         <img src="assets/Dr. SRKP.jpg" class="img-fluid doctorImage " alt="profile image">
@@ -68,7 +68,7 @@
             Yours truly,<br><b>Surendra Kumar</b><br>Managing Director
         </p>
     </div>
-</div> -->
+</div>
 
 <div class="row m-5 mt-4">
 
