--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,11 +1,13 @@
+
 .container {
     font-family: poppins;
+  
 }
 
 .carousel {
-    width: 100%;
+    /* width: 100%; */
     margin: 10px;
-    background-color: red;
+    /* background-color: red; */
 }
 
 .carousel-item {
@@ -15,18 +17,25 @@
 
 .card {
 
-    height: auto;
+    height: 380px;
     width: 250px;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     margin-right: 10px;
+    transition: .5s ease;
+
 }
 
 .card:hover {
-    box-shadow: 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030;
+    box-shadow: 1px 10px 8px 2px #00000030, 1px 10px 8px 2px #00000030, 1px 10px 8px 2px #00000030, 1px 10px 8px 2px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030;
 
     /* box-shadow: 1px 3px 8px #ffffff,1px 3px 8px #ffffff,1px 3px 8px #ffffff,1px 3px 8px #ffffff; */
 }
-
+.btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+}
 .divider {
     margin: 20px 0;
     width: 100px;
