--- a/src/app/videos/videos.component.css
+++ b/src/app/videos/videos.component.css
@@ -104,3 +104,32 @@ img {
 
 
 
+.container {
+    font-family: poppins;
+  
+}
+
+.carousel {
+    /* width: 100%; */
+    margin: 10px;
+    background-color: red;
+}
+
+.carousel-item {
+    width: 100%;
+    /* height: 380px; */
+}
+
+.card {
+
+    height: auto;
+    width: 250px;
+    border: 2px solid red;
+    margin-right: 10px;
+}
+
+.card:hover {
+    box-shadow: 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030;
+
+    /* box-shadow: 1px 3px 8px #ffffff,1px 3px 8px #ffffff,1px 3px 8px #ffffff,1px 3px 8px #ffffff; */
+}
