--- a/src/app/Our-Services/services.component.html
+++ b/src/app/Our-Services/services.component.html
@@ -1,13 +1,15 @@
 <!-- <p class="h1 m-3 ms-5 text-center"><u> Our Services</u></p>  -->
-<p class="h1 m-3 ms-5 text-center"> Our Services</p>
+<p class="h1 m-3 ms-5 text-center"> Our <span style="color: rgb(255, 0, 230);">Services</span></p>
 <p class="m-1 p-3">Metropolis is a global leader in Blood Tests, Diagnostics and Wellness services. With operations
     across India, Africa,
     South Asia, and Middle East, we are trusted millions of Customers for their Inner Health Management.
 
 </p>
 
+
 <div class="container mt-3 p-5">
-    <div class="row row-cols-1 row-cols-md-4 g-4">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+
         <div class="col">
             <div class="card h-100">
                 <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
@@ -20,6 +22,7 @@
                 </div>
             </div>
         </div>
+
         <div class="col">
             <div class="card h-100">
                 <img src="assets/Services/blood-collection.jpg" class="card-img-top" alt="...">
@@ -29,6 +32,7 @@
                 </div>
             </div>
         </div>
+
         <div class="col">
             <div class="card h-100">
                 <img src="assets/Services/Report.jpg" class="card-img-top" alt="...">
@@ -40,6 +44,7 @@
                 </div>
             </div>
         </div>
+
         <div class="col">
             <div class="card h-100">
                 <img src="assets/Services/Doctor-suggestion.jpg" class="card-img-top" alt="...">
@@ -51,6 +56,7 @@
                 </div>
             </div>
         </div>
+
         <div class="col">
             <div class="card h-100">
                 <img src="assets/Services/X-Ray.jpg" class="card-img-top" alt="...">
@@ -63,6 +69,7 @@
                 </div>
             </div>
         </div>
+
         <div class="col">
             <div class="card h-100">
                 <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
@@ -75,6 +82,7 @@
                 </div>
             </div>
         </div>
+
         <div class="col">
             <div class="card h-100">
                 <img src="assets/Services/wellness.jpg" class="card-img-top" alt="...">
@@ -86,12 +94,26 @@
                 </div>
             </div>
         </div>
+
         <div class="col">
             <div class="card h-100">
                 <img src="assets/Services/nutrition-diet.jpg" class="card-img-top" alt="...">
                 <h5 class="card-title text-center m-4">Nutrition & Dietition</h5>
                 <div class="card-body">
                     <p class="card-text  text-center m-4">This is a longer card with supporting text below as a natural
+                        lead-in to
+                        additional
+                        content. This content is a little bit longer.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card h-100">
+                <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
+                <h5 class="card-title text-center m-4">Medical Store</h5>
+                <div class="card-body">
+                    <p class="card-text text-center m-4">This is a longer card with supporting text below as a natural
                         lead-in to
                         additional
                         content. This content is a little bit longer.</p>
