--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -7,9 +7,9 @@
         <p class="text-center">Lore optio sit minima. Harum quaerat veniam optio soluta cumque a eos aspernatur.
             Delectus, quasi?
         </p> -->
-        <div class="row m-5 mt-1">
+        <div class="row m-5 mt-4">
 
-            <div class="col">
+            <div class="col-4">
 
                 <h4>
                     <a href="https://maps.app.goo.gl/CeyqYnuK5q21NpdV6"><i class="fa-solid fa-location-dot"></i></a>
@@ -20,7 +20,7 @@
                 </p>
             </div>
 
-            <div class="col">
+            <div class="col-4">
 
                 <h4> <i class="fa-solid fa-envelope"></i></h4>
                 <p class="text-center">
@@ -29,7 +29,7 @@
                 </p>
 
             </div>
-            <div class="col">
+            <div class="col-4">
 
                 <!-- <h5> -->
                 <i class="fa-solid fa-phone"></i>
@@ -42,56 +42,54 @@
             </div>
         </div>
     </div>
-    <hr style="color: red; border: 2px solid rgb(0, 204, 255);">
+    <hr style="color: rgb(0, 0, 0); border: 2px solid rgb(0, 0, 0);">
 
     <div class="text mt-1">
-        <h1 class="text-center text-info ">Have some query mail us</h1>
-        <p class="text-center text-warning">Visit our office or drop a word if you have any queries.</p>
+        <h1 class="text-center " style="color: rgb(255, 0, 230);">Have some query mail us</h1>
+        <p class="text-center text-dark">Visit our office or drop a word if you have any queries.</p>
     </div>
+    <div class="container-xxl mt-5">
 
-    <div class=" row">
+        <div class="row">
 
-
-        <!-- <div class="col">
-            <img class="img-fluid" src="assets/Contact-img.svg" alt="" height="400" width="500">
-        </div> -->
-        <div class="col">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3597.2366797400705!2d81.99712601000708!3d25.630269177340566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399ab1d02c3dfec1%3A0x4f7feeca618b7e9f!2sTaza%20Akhbar!5e0!3m2!1sen!2sin!4v1706091841500!5m2!1sen!2sin"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
-        </div>
-
-        <div class="col form ">
-
-            <div class="form-floating mb-3">
-                <input type="name" class="form-control" id="floatingInput" placeholder="Enter Your Name">
-                <label for="floatingInput">Enter Your Name</label>
+            <div class="col-lg-6">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3597.2366797400705!2d81.99712601000708!3d25.630269177340566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399ab1d02c3dfec1%3A0x4f7feeca618b7e9f!2sTaza%20Akhbar!5e0!3m2!1sen!2sin!4v1706091841500!5m2!1sen!2sin"
+                    style="border:0; width: 100%; height: 350px;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
             </div>
 
-            <div class="row">
-                <div class="col mb-3">
-                    <input type="email" class="form-control " id="floatingInput" placeholder="Enter Your Email">
-                    <!-- <label for="floatingInput">Email address</label> -->
+            <div class="col-lg-6 form mb-5 mt-5" style="height: 350px;">
+
+                <div class="form-floating mb-3">
+                    <input type="name" class="form-control" id="floatingInput" placeholder="Enter Your Name">
+                    <label for="floatingInput">Enter Your Name</label>
                 </div>
-                <div class="col">
-                    <input type="number" class="form-control" id="floatingNumber" placeholder="Mobile Number">
-                    <!-- <label for="floatingNumber">Mobile Number</label> -->
+
+                <div class="row">
+                    <div class="col mb-3">
+                        <input type="email" class="form-control " id="floatingInput" placeholder="Enter Your Email">
+                        <!-- <label for="floatingInput">Email address</label> -->
+                    </div>
+                    <div class="col">
+                        <input type="number" class="form-control" id="floatingNumber" placeholder="Mobile Number">
+                        <!-- <label for="floatingNumber">Mobile Number</label> -->
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-floating mt-3">
-                <textarea class="form-control " placeholder="Leave a comment here" id="floatingTextarea2"
-                    style="height: 100px"></textarea>
-                <label for="floatingTextarea2">Comments</label>
-            </div>
+                <div class="form-floating mt-3">
+                    <textarea class="form-control " placeholder="Leave a comment here" id="floatingTextarea2"
+                        style="height: 100px"></textarea>
+                    <label for="floatingTextarea2">Comments</label>
+                </div>
 
-            <div class="text-center ">
-                <button type="button" class="btn btn-outline-success mt-3 w-50">Submit</button>
-                <!-- <button type="button" class="btn btn-outline-danger m-3">Reset</button> -->
-            </div>
+                <div class="text-center ">
+                    <button type="button" class="btn btn-outline-success mt-3">Submit</button>
+                    <!-- <button type="button" class="btn btn-outline-danger m-3">Reset</button> -->
+                </div>
 
+            </div>
         </div>
     </div>
 </div>
