--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -143,9 +143,9 @@
 </div> -->
 
 
-<div class="container-fluid mt-5">
+<div class="container-fluid package mt-5">
 
-    <h1 class="h1 ms-4">Our Best Packages</h1>
+    <h1 class="h1 ms-4">Our Best <span style="color: rgb(255, 0, 230);">Packages</span></h1>
     <p class="m-3">Choose from our wide range of TruHealth Package and Health Checkups</p>
     <!-- <div class="bton">
     <button routerLink="/package" class="btn btn-info p-2 m-1" >View More</button>
@@ -175,7 +175,7 @@
                                     Some quick example text to build on the card title and make up the
                                     bulk of the card's content.</p> -->
                                 <h5>Rs. <span>150</span></h5>
-                                <a href="#" class="btn btn-primary">View More</a>
+                                <a href="#" class="btn btn-primary mt-5">View More</a>
                             </div>
                         </div>
                         <div class="card d-none d-md-block">
@@ -341,7 +341,7 @@
         <div class="container">
             <div class="row">
                 <div class="section-head col-sm-12">
-                    <h4><span>Why Choose</span> Us?</h4>
+                    <h1>Why<span style="color: rgb(255, 0, 230);"> Choose</span> Us?</h1>
                     <p>When you choose us, you'll feel the benefit of 10 years' experience of Pathology Lab. Because
                         we know the digital world and we know that how to handle it. With working knowledge of online,
                         SEO and social media.</p>
@@ -364,23 +364,26 @@
                 <div class="col-lg-4 col-sm-6">
                     <div class="item"> <span class="icon feature_box_col_three">
                             <img src="assets/Choose-us/24 x 7.svg" alt="" height="60" width="60"
-                                style="background: none;">
+                            style="border-radius: 50%;">
                         </span>
                         <h6>24 x 7 User Support</h6>
                         <p>If our customer has any problem and any query we are always happy to help then.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <div class="item"> <span class="icon feature_box_col_four"><img
-                                src="assets/Choose-us/accurate-reports.svg" alt=""></span>
+                    <div class="item">
+                        <span class="icon feature_box_col_four">
+                            <img src="assets/Choose-us/accurate-reports.svg"
+                                alt=""></span>
                         <h6>Accurate Reports</h6>
                         <p>Everyone wants to live on top of the mountain, but all the happiness and growth occurs while
                             you're climbing it</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <div class="item"> <span class="icon feature_box_col_five"><img
-                                src="assets/Choose-us/patient-service-centres.svg" alt="" height="60" width="60"></span>
+                    <div class="item"> 
+                        <span class="icon feature_box_col_five"><img
+                                src="assets/Choose-us/patient-service-centres.svg" alt="" height="60" width="60" style="border-radius: 50%;"></span>
                         <h6>Patient Service Centres</h6>
                         <p>Holding back technology to preserve broken business models is like allowing blacksmiths to
                             veto the internal combustion engine in order to protect their horseshoes.</p>
@@ -402,9 +405,9 @@
 
 <!-- What Our Customers Say -->
 
-<div class="container mt-4">
+<div class="container customer mt-4">
     <!-- <app-customers-say></app-customers-say> -->
-    <h1 class="text-center">What Our Customers Say </h1>
+    <h1 class="text-center">What Our <span style="color: rgb(255, 0, 230);">Customers</span> Say </h1>
 
     <!-- <div class="border"></div> -->
 
@@ -456,8 +459,8 @@
                 <div class="rating">
                     <span class="active">★</span>
                     <span class="active">★</span>
-                    <span class="">★</span>
-                    <span class="">★</span>
+                    <span class="active">★</span>
+                    <span class="active">★</span>
                     <span class="">★</span>
                 </div>
                 <p>Reviewed on 01/02/2023</p>
@@ -515,27 +518,43 @@
                 <p>Reviewed on 01/03/2023</p>
             </div>
         </div>
-        <button class="btn btn-info" routerLink="/customers-say">Know More</button>
+        <button class="btn btn-info p-2 fs-3" routerLink="/customers-say">Know More</button>
     </div>
 </div>
 
 <!-- About Section -->
 
+<div class="container-xxl about">
+    <div class="row mt-5">
+        <div class="col-lg-6 mb-5">
+            <img class="img-fluid" alt="customer1" src="assets/Images/Images-6.jpg" height="350">
 
-<div class="col mt-3 p-5">
-    <h4>About Us</h4>
-    <p class="about-text">
-        Book a blood test or expert health check-up packages online with Patel Healthcare - one of the leading
-        diagnostic service provider in India. Get quality reports trusted by leading doctors and hospitals from our NABL
-        and CAP certified labs of Patel.
+        </div>
+        <div class="col-lg-6">
+            <h4 style="color: rgb(255, 0, 251);">About Us</h4>
+
+            <p>
+                Book a blood test or expert health check-up packages online with Patel Healthcare - one of the
+                leading
+                diagnostic service provider in India. Get quality reports trusted by leading doctors and hospitals
+                from our NABL
+                and CAP certified labs of Patel.
 
 
-        One can either visit our nearest Patel lab to give your blood sample or opt for blood collection at home
-        service, so that you can get all the benefits of diagnostic centre and pathology labs in the comfort of your
-        home.
+                One can either visit our nearest Patel lab to give your blood sample or opt for blood collection at
+                home
+                service, so that you can get all the benefits of diagnostic centre and pathology labs in the comfort
+                of your
+                home.
 
-        With a certified team of 200 senior pathologists and over 2000 technicians we, provide diagnostic services
-        ranging from routine to semi speciality tests like oncology, neurology, gynaecology, nephrology to complete
-        health check-up packages for Men, Women, Senior Citizens, Youth & <a routerLink="/about"> view more...</a>.
-    </p>
+                With a certified team of 200 senior pathologists and over 2000 technicians we, provide diagnostic
+                services
+                ranging from routine to semi speciality tests like oncology, neurology, gynaecology, nephrology to
+                complete
+                health check-up packages for Men, Women, Senior Citizens, Youth & <a routerLink="/about"
+                    style="font-size: 20px; text-decoration: none; color:  rgb(255, 0, 251);"> view
+                    more...</a>
+            </p>
+        </div>
+    </div>
 </div>
