--- a/src/app/Our-Services/services.component.css
+++ b/src/app/Our-Services/services.component.css
@@ -3,32 +3,41 @@ u {
     text-decoration-color: rgb(0, 255, 255);
     text-decoration-style: solid;
 }
-.img:hover{
+
+.img:hover {
     box-shadow: inset 1px;
 }
+
 .card-body:hover {
     background-color: #b0bec5;
 }
 
 .card:hover {
-    box-shadow: 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030;
+    box-shadow: 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030,
+        0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030;
 
     /* box-shadow: 1px 3px 8px #ffffff,1px 3px 8px #ffffff,1px 3px 8px #ffffff,1px 3px 8px #ffffff; */
 }
 
-.card{
+.card {
     cursor: pointer;
     overflow: hidden;
     display: flex;
 }
+
+.card-title {
+    font-size: 26px;
+    color: rgb(255, 0, 230);
+}
+
 .card-body {
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    background: linear-gradient(rgba(0, 0, 0, .1), #0fe);
-    color: #000000;
+    background-color: #000000;
+    color: #ffffff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -39,9 +48,14 @@ u {
 }
 
 .card:hover .card-body {
+    background-color: #000000;
+    font-size: 16px;
+    font-family: poppins;
+    color: #fff;
     transform: translateY(0);
 
 }
+
 .card-body:hover {
     opacity: .8;
 }
