--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,7 +1,7 @@
 <div class="card text-white ">
     <img class="img-fluid" src="assets/about.jpg" class="card-img" alt="About Us" height="220" width="auto">
     <div class="card-img-overlay">
-        <h5 class="h5 card-title mt-5">About Us</h5>
+        <h5 class="h5 card-title mt-5"> <span style="color: rgb(255, 0, 230);">About</span> Us</h5>
         <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
             This content is a little bit longer.</p> -->
         <!-- <p class="card-text" style="float: right; margin-top: 150px;">Thank you for visiting this section, here you will
@@ -26,47 +26,49 @@
     </p>
 </div>
 
-<div class="row d-flex align-items-top p-3">
-    <div class="col-sm-1"></div>
-    <div class="col-sm-4">
-        <img src="assets/Dr. SRKP.jpg" class="img-fluid doctorImage " alt="profile image">
-        <p class="doctorName mb-1"> <strong>Dr. Surendra Kumar Patel</strong></p>
-        <p class="doctorDesignation ">(Managing Director)</p>
-        <p class="md-desc"><i><b>As one of the country’s leading diagnostic companies, MHL
-                    continues building and nurturing its talent. Several employee training and
-                    development initiatives are often undertaken. This helps incorporate
-                    integrity as a core ingredient of the Company’s work culture.</b></i></p>
-    </div>
-    <div class="col-sm-5 offset-sm-1">
-        <h2>MD’s Message</h2>
-        <p class="text-justify">To begin with, I would like to bring your attention to
-            an Indicator that I have been passionate and relentless about. I am happy to
-            share with you that in FY19, our Net Promoter Score has been on average at
-            85, which means that 85% of our customers are willing to recommend
-            Patel to their family and network. Our Chairman in his note has
-            emphasized on Patel’ core vision of putting the patients first and our
-            customer loyalty score is an outcome of this vision.</p>
-
-        <p class="text-justify"><strong>Going closer to the patient</strong><br>
-            FY19 has ended on a positive note for us as the company delivered faster
-            than industry growth. We are positive on the short and medium term growth
-            for Patel owing to fast paced network expansion, relentless execution,
-            strong brand and customer first philosophy.
-        </p>
-
-        <p class="text-justify"><strong>The Patel Family</strong><br>
-            Our people are at the core of everything we do. Our highly experienced
-            leadership team leads day to day business and operations. Patel’ strong
-            scientific and technical team of over 2000 members is led by a team of 200
-            doctors and pathologists. Our phlebotomists and home service technicians are
-            best in class, highly skilled and trained to collect samples in a single
-            prick and are efficient in drawing samples from infants, small children and
-            the elderly. We will make continuous efforts to progress on diversity and
-            inclusion as we move forward.
-        </p>
-        <p class="regrads-p">
-            Yours truly,<br><b>Surendra Kumar</b><br>Managing Director
-        </p>
+<div class="container-xxl">
+    <div class="row p-3">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-4">
+            <img src="assets/Dr. SRKP.jpg" class="img-fluid doctorImage " alt="profile image">
+            <p class="doctorName mb-1"> <strong>Dr. Surendra Kumar Patel</strong></p>
+            <p class="doctorDesignation ">(Managing Director)</p>
+            <p class="md-desc"><i><b>As one of the country’s leading diagnostic companies, MHL
+                        continues building and nurturing its talent. Several employee training and
+                        development initiatives are often undertaken. This helps incorporate
+                        integrity as a core ingredient of the Company’s work culture.</b></i></p>
+        </div>
+        <div class="col-sm-5 offset-sm-1">
+            <h2>MD’s Message</h2>
+            <p class="text-justify">To begin with, I would like to bring your attention to
+                an Indicator that I have been passionate and relentless about. I am happy to
+                share with you that in FY19, our Net Promoter Score has been on average at
+                85, which means that 85% of our customers are willing to recommend
+                Patel to their family and network. Our Chairman in his note has
+                emphasized on Patel’ core vision of putting the patients first and our
+                customer loyalty score is an outcome of this vision.</p>
+    
+            <p class="text-justify"><strong>Going closer to the patient</strong><br>
+                FY19 has ended on a positive note for us as the company delivered faster
+                than industry growth. We are positive on the short and medium term growth
+                for Patel owing to fast paced network expansion, relentless execution,
+                strong brand and customer first philosophy.
+            </p>
+    
+            <p class="text-justify"><strong>The Patel Family</strong><br>
+                Our people are at the core of everything we do. Our highly experienced
+                leadership team leads day to day business and operations. Patel’ strong
+                scientific and technical team of over 2000 members is led by a team of 200
+                doctors and pathologists. Our phlebotomists and home service technicians are
+                best in class, highly skilled and trained to collect samples in a single
+                prick and are efficient in drawing samples from infants, small children and
+                the elderly. We will make continuous efforts to progress on diversity and
+                inclusion as we move forward.
+            </p>
+            <p class="regrads-p">
+                Yours truly,<br><b>Surendra Kumar</b><br>Managing Director
+            </p>
+        </div>
     </div>
 </div>
 
