--- a/src/app/carousel/carousel.component.css
+++ b/src/app/carousel/carousel.component.css
@@ -9,11 +9,15 @@
  */
 
 .c-item{
-    height: 480px;
+    height: 450px;
 
 }
 .c-img{
     height: 100%;
     object-fit: cover;
-    filter: brightness(0.6);
+    filter: brightness(1);
+}
+.carousel-caption{
+    position: absolute;
+    left: 0;
 }
