--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -42,44 +42,52 @@
 
 <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
-        <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="0" class="active"
-            aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="1"
-            aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="2"
-            aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="0" class="active" aria-current="true"
+            aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active  c-item">
-            <img src="assets/Carousel_Images/Carousel-1.jpg" class="c-img d-block w-100" alt="...">
-            <div class="carousel-caption top-0 mt-4 d-none d-md-block text-dark">
-                <h5 class="mt-4 text-uppercase display-1 fw-bolder">First slide label</h5>
-                <p class="fs-3">Some representative placeholder content for the first slide.</p>
-                <button class="btn btn-info px-4 py-2 fs-5 mt-4">Contact Us</button>
+            <img src="assets/Carousel_Images/Carousel-1.png" class="img-fluid c-img d-block w-100" alt="...">
+            <div class="carousel-caption mt-4 text-dark">
+                <!-- <h5 class=" mt-4 text-uppercase display-1 fw-bolder ">
+                    Rapid Lab Tests & Screenings </h5>
+                <p class="fs-3">Some representative placeholder content for the first slide.</p> -->
+                <!-- <button class="btn btn-info px-4 py-2 fs-5 mt-2">Contact Us</button> -->
             </div>
         </div>
         <div class="carousel-item c-item">
-            <img src="assets/Carousel_Images/Carousel-2.jpg" class="c-img d-block w-100" alt="...">
+            <img src="assets/Carousel_Images/Carousel-2.png" class=" img-fluid c-img d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Second slide label</h5>
                 <p>Some representative placeholder content for the second slide.</p>
             </div>
         </div>
         <div class="carousel-item c-item">
-            <img src="assets/Carousel_Images/Carousel-3.jpg" class="c-img d-block w-100" alt="...">
+            <img src="assets/Carousel_Images/Carousel-3.png" class="c-img d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Third slide label</h5>
+                <p>Some representative placeholder content for the third slide.</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="assets/Carousel_Images/Carousel-4.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Third slide label</h5>
                 <p>Some representative placeholder content for the third slide.</p>
             </div>
         </div>
     </div>
-    <button class="carousel-control-prev carousel-dark" type="button" data-bs-target="#hero-carousel" data-bs-slide="prev">
+    <button class="carousel-control-prev carousel-dark" type="button" data-bs-target="#hero-carousel"
+        data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden ">Previous</span>
     </button>
-    <button class="carousel-control-next carousel-dark" type="button" data-bs-target="#hero-carousel" data-bs-slide="next">
+    <button class="carousel-control-next carousel-dark" type="button" data-bs-target="#hero-carousel"
+        data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
     </button>
 </div>
-
