--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,7 +3,9 @@
     font-family: poppins;
   
 }
-
+div{
+    font-family: poppins;
+}
 .carousel {
     /* width: 100%; */
     margin: 10px;
@@ -21,14 +23,23 @@
     width: 250px;
     /* border: 2px solid red; */
     margin-right: 10px;
-    transition: .5s ease;
+    transition: all 0.4s ease;
 
 }
 
 .card:hover {
     box-shadow: 1px 10px 8px 2px #00000030, 1px 10px 8px 2px #00000030, 1px 10px 8px 2px #00000030, 1px 10px 8px 2px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030;
+    transform: translateY(-15px);
 
     /* box-shadow: 1px 3px 8px #ffffff,1px 3px 8px #ffffff,1px 3px 8px #ffffff,1px 3px 8px #ffffff; */
+}
+.review-card{
+    transition: all 0.4s ease;
+
+}
+.review-card:hover{
+    transform: translateY(-15px);
+
 }
 .btn{
     display: flex;
@@ -43,155 +54,6 @@
     background: #00984a;
     border-radius: 50px
 }
-
-
-
-
-
-
-
-/* .space-between {
-    padding-top: 25px;
-    padding-bottom: 25px;
-}
-
-.counter .background-sec {
-
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.flex-center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-
-
-a,
-a:hover,
-a:focus,
-a:active {
-    text-decoration: none;
-    outline: none;
-}
-
-a,
-a:active,
-a:focus {
-    color: #333;
-    text-decoration: none;
-    transition-timing-function: ease-in-out;
-    -ms-transition-timing-function: ease-in-out;
-    -moz-transition-timing-function: ease-in-out;
-    -webkit-transition-timing-function: ease-in-out;
-    -o-transition-timing-function: ease-in-out;
-    transition-duration: .2s;
-    -ms-transition-duration: .2s;
-    -moz-transition-duration: .2s;
-    -webkit-transition-duration: .2s;
-    -o-transition-duration: .2s;
-}
-
-ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-img {
-    max-width: 100%;
-    height: auto;
-}
-
-span,
-a,
-a:hover {
-    display: inline-block;
-    text-decoration: none;
-    color: inherit;
-}
-
-.section-head {
-    margin-bottom: 60px;
-}
-
-.section-head h4 {
-    position: relative;
-    padding: 0;
-    color: #f91942;
-    line-height: 1;
-    letter-spacing: 0.3px;
-    font-size: 34px;
-    font-weight: 700;
-    text-align: center;
-    text-transform: none;
-    margin-bottom: 30px;
-}
-
-.section-head h4:before {
-    content: '';
-    width: 60px;
-    height: 3px;
-    background: #f91942;
-    position: absolute;
-    left: 0px;
-    bottom: -10px;
-    right: 0;
-    margin: 0 auto;
-}
-
-.section-head h4 span {
-    font-weight: 700;
-    padding-bottom: 5px;
-    color: #2f2f2f
-}
-
-p.service_text {
-    color: #cccccc !important;
-    font-size: 16px;
-    line-height: 28px;
-    text-align: center;
-}
-
-.section-head p,
-p.awesome_line {
-    color: #000000;
-    font-size: 16px;
-    line-height: 28px;
-    text-align: center;
-}
-
-.extra-text {
-    font-size: 34px;
-    font-weight: 700;
-    color: #2f2f2f;
-    margin-bottom: 25px;
-    position: relative;
-    text-transform: none;
-}
-
-.extra-text::before {
-    content: '';
-    width: 60px;
-    height: 3px;
-    background: #f91942;
-    position: absolute;
-    left: 0px;
-    bottom: -10px;
-    right: 0;
-    margin: 0 auto;
-}
-
-.extra-text span {
-    font-weight: 700;
-    color: #f91942;
-} */
-
-
-
-
 
 
 /* CSS FOR WHY CHOOSE US */
@@ -211,7 +73,7 @@ p.awesome_line {
 }
 
 .item:hover {
-    background: rgb(0, 3, 12);
+    background: rgb(0, 0, 0);
     box-shadow: 0 8px 20px 0px rgba(0, 0, 0, 0.2);
     -webkit-transition: all .5s ease 0;
     transition: all .5s ease 0;
@@ -221,7 +83,7 @@ p.awesome_line {
 .item:hover .item,
 .item:hover span.icon {
     background: #fff;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     -webkit-transition: all .5s ease 0;
     transition: all .5s ease 0;
     transition: all 0.5s ease 0s;
@@ -372,7 +234,7 @@ p.awesome_line {
 }
 
 .rating span.active {
-    color: #fbc02d;
+    color: rgb(255, 0, 230)
 }
 
 @media screen and (max-width: 767px) {
@@ -384,4 +246,22 @@ p.awesome_line {
     .review-card {
         width: 85%;
     }
+}
+.about,.package{
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
+
+}
+.btn:hover{
+    border: 1px solid rgb(255, 0, 251);
+    color: #fff;
+    background-color: rgb(255, 0, 251);
+}
+
+/* CSS FOR ABOUT US SECTION*/
+
+.container-xxl {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
