--- a/src/app/images/images.component.css
+++ b/src/app/images/images.component.css
@@ -1,6 +1,5 @@
-.card:hover {
+/* .card:hover {
 
-    /* box-shadow: 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030; */
     transition: all 0.5s ease-in;
 }
 
@@ -9,10 +8,6 @@
     height: 100%;
 }
 
-/* .card:hover img {
-
-    transform: scale(1.1);
-} */
 .card {
     cursor: pointer;
     overflow: hidden;
@@ -51,4 +46,60 @@
 
 .card-body:hover {
     opacity: 1;
+} */
+
+
+.row {
+    /* display: -ms-flexbox; */
+    /* IE10 */
+    display: flex;
+    /* -ms-flex-wrap: wrap; */
+    /* IE10 */
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+
+/* Create four equal columns that sits next to each other */
+.column {
+    /* -ms-flex: 25%; */
+    /* IE10 */
+    flex: 25%;
+    max-width: calc(100%/3);
+    padding: 13px;
+    /* padding: 0 4px; */
+}
+
+.column img {
+    margin-top: 25px;
+    vertical-align: middle;
+    width: 100%;
+}
+.column img:hover{
+    border-radius: 6px;
+    border: 2px solid rgb(255, 0, 230);
+
+    box-shadow: 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030,
+     0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030,
+     0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030,
+     0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030,
+      0 0px 8px 0px #00000030
+      ;
+
+}
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+    .column {
+        /* -ms-flex: 50%; */
+        flex: 50%;
+        max-width: 50%;
+    }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .column {
+        /* -ms-flex: 100%; */
+        flex: 100%;
+        max-width: 100%;
+    }
 }
