--- a/src/app/images/images.component.html
+++ b/src/app/images/images.component.html
@@ -1,6 +1,4 @@
-<div class="container mt-5">
-
-
+<!-- <div class="container mt-5">
     <div class=" card-group mt-4 p-3">
         <div class="card ms-3" style="width: 18rem;">
             <img src="assets/Images/Dr. Holding Blood Sample-1.jpg" class="card-img-top" alt="...">
@@ -138,22 +136,45 @@
 </div>
 
 
-<!-- <div class="card ms-3" style="width: 18rem;">
-    <img src="assets/Images/Dr. Holding Blood Sample-1.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-        <p class="card-text">
-            After collecting the blood sample of patient & we collect the blood very carefully and neatly.
-        </p>
+
+<app-scroll-top-button></app-scroll-top-button> -->
+
+
+<div class="container-xxl mt-5">
+    
+<div class="row">
+    <div class="column">
+        <img src="assets/Images/Dr. Holding Blood Sample-1.jpg" style="width:100%">
+        <img src="assets/Images/Dr. with Patient-2.jpg" style="width:100%">
+        <img src="assets/Images/Dr. Holding Blood on Slide-3.jpg" style="width:100%">
+        <img src="assets/Images/COVID-19 Sample-4.jpg" style="width:100%">
+        <img src="assets/Images/Checking Blood Sample-5.jpg" style="width:100%">
+        <img src="assets/Images/Images-6.jpg" style="width:100%">
+        <img src="assets/Images/Images-7.jpg" style="width:100%">
     </div>
-</div> -->
+    <div class="column">
+        <img src="assets/Images/Images-8.jpg" style="width:100%">
+        <img src="assets/Images/Images-9.jpg" style="width:100%">
+        <img src="assets/Images/Images-10.jpg" style="width:100%">
+        <img src="assets/Images/Images-11.jpg" style="width:100%">
+        <img src="assets/Images/Images-12.jpg" style="width:100%">
+        <img src="assets/Images/Images-13.jpg" style="width:100%">
+    </div>
+    <div class="column">
+        <img src="assets/Images/Images-14.jpg" style="width:100%">
+        <img src="assets/Images/Images-7.jpg" style="width:100%">
+        <img src="assets/Images/Images-11.jpg" style="width:100%">
+        <img src="assets/Images/Images-9.jpg" style="width:100%">
+        <img src="assets/Images/Images-6.jpg" style="width:100%">
 
-
-
-
-
-
-
-
-
-
-<app-scroll-top-button></app-scroll-top-button>
+    </div>
+    <!-- <div class="column">
+      <img src="assets/Images/Images-6.jpg" style="width:100%">
+      <img src="assets/Images/Images-6.jpg" style="width:100%">
+      <img src="assets/Images/Images-6.jpg" style="width:100%">
+      <img src="assets/Images/Images-6.jpg" style="width:100%">
+      <img src="assets/Images/Images-6.jpg" style="width:100%">
+      <img src="assets/Images/Images-6.jpg" style="width:100%">
+    </div> -->
+</div>
+</div>
