--- a/src/app/packages/packages.component.html
+++ b/src/app/packages/packages.component.html
@@ -1,7 +1,7 @@
 <div class="card text-white">
     <img src="assets/Package-img.jpg" class="card-img" alt="..." height="300" style="width: 100%;">
     <div class="card-img-overlay text-center" style="background-color: rgba(50, 50, 50, 0.6);">
-        <h1 class="h1 text-center mt-5">Our Packages</h1>
+        <h1 class="h1 text-center mt-5">Our <span style="color: rgb(255, 0, 230);">Packages</span> </h1>
         <blockquote class="blockquote text-center">
             <p> Your Path to Comprehensive Health and Wellness.</p>
         </blockquote>
@@ -53,9 +53,7 @@
     </div>
     <div class="card mb-5" style="max-width: 100%;">
         <div class="row g-0">
-            <div class="col-md-4">
-                <img src="assets/Packages/hba1c.jpeg" class="img-fluid " alt="...">
-            </div>
+           
             <div class="col-md-8 ">
                 <div class="card-body p-5">
                     <h5 class="card-title">HbA1c; GLYCOSYLATED HEMOGLOBIN</h5>
@@ -75,6 +73,9 @@
                     <h5 class="card-text"><small class="text-muted">₹ 440 </small></h5>
 
                 </div>
+            </div>
+            <div class="col-md-4">
+                <img src="assets/Packages/hba1c.jpeg" class="img-fluid " alt="...">
             </div>
         </div>
     </div>
@@ -102,9 +103,7 @@
     </div>
     <div class="card mb-5" style="max-width: 100%;">
         <div class="row g-0">
-            <div class="col-md-4">
-                <img src="assets/Packages/thyroid.jpg" class="img-fluid " alt="...">
-            </div>
+          
             <div class="col-md-8 ">
                 <div class="card-body p-5">
                     <h5 class="card-title">THYROID PROFILE, TOTAL</h5>
@@ -120,6 +119,9 @@
                     <h5 class="card-text"><small class="text-muted">₹ 550 </small></h5>
 
                 </div>
+            </div>
+            <div class="col-md-4">
+                <img src="assets/Packages/thyroid.jpg" class="img-fluid " alt="...">
             </div>
         </div>
     </div>
@@ -152,9 +154,7 @@
     </div>
     <div class="card mb-5" style="max-width: 100%;">
         <div class="row g-0">
-            <div class="col-md-4">
-                <img src="assets/Packages/LIVER & KIDNEY PANE.jpg" class="img-fluid " alt="...">
-            </div>
+           
             <div class="col-md-8 ">
                 <div class="card-body p-5">
                     <h5 class="card-title">LIVER & KIDNEY PANEL</h5>
@@ -174,6 +174,9 @@
                     <h5 class="card-text"><small class="text-muted">₹ 1550 </small></h5>
 
                 </div>
+            </div>
+            <div class="col-md-4">
+                <img src="assets/Packages/LIVER & KIDNEY PANE.jpg" class="img-fluid " alt="...">
             </div>
         </div>
     </div>
@@ -202,9 +205,7 @@
     </div>
     <div class="card mb-5" style="max-width: 100%;">
         <div class="row g-0">
-            <div class="col-md-4">
-                <img src="assets/Packages/urine.jpg" class="img-fluid " alt="...">
-            </div>
+          
             <div class="col-md-8 ">
                 <div class="card-body p-5">
                     <h5 class="card-title">CULTURE, URINE</h5>
@@ -220,6 +221,9 @@
                     <h5 class="card-text"><small class="text-muted">₹ 810 </small></h5>
 
                 </div>
+            </div>
+            <div class="col-md-4">
+                <img src="assets/Packages/urine.jpg" class="img-fluid " alt="...">
             </div>
         </div>
     </div>
@@ -247,9 +251,7 @@
     </div>
     <div class="card mb-5" style="max-width: 100%;">
         <div class="row g-0">
-            <div class="col-md-4">
-                <img src="assets/Packages/WIDAL SLIDE AGGLUTINATION TEST.webp" class="img-fluid " alt="...">
-            </div>
+        
             <div class="col-md-8 ">
                 <div class="card-body p-5">
                     <h5 class="card-title">WIDAL SLIDE AGGLUTINATION TEST</h5>
@@ -262,6 +264,9 @@
                     </p>
                     <h5 class="card-text"><small class="text-muted">₹ 290 </small></h5>
                 </div>
+            </div>
+            <div class="col-md-4">
+                <img src="assets/Packages/WIDAL SLIDE AGGLUTINATION TEST.webp" class="img-fluid " alt="...">
             </div>
         </div>
     </div>
